--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^19.2.0",
     "react": "^19.2.0",
     "react-router-dom": "^7.9.6",
-    "@google/genai": "^1.30.0"
+    "@google/genai": "^1.30.0",
+    "framer-motion": "^11.0.28"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
